second commit by Bartolaba

--- a/index.html
+++ b/index.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Layout 4</title>
-</head>
-<body>
-    <header>Banner</header>
-    <nav>Navigation Links</nav>
-        <aside>Main Content</aside>
-            <main>
-                <article>Picture</article>
-                <figure>About Me Blurb</figure>
-                <section>Recent Tweets</section>
-            </main>
 
-    <footer>Footer</footer>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
+  <title>Layout 4</title>
+</head>
+
+
+<body>
+  <header>Banner</header>
+  <nav>Nav Links</nav>
+  <div class="container">
+    <main>Main Content</main>
+    <aside>
+      <article class="one">Picture</article>
+      <article class="two">About</article>
+      <article class="three">Recent Tweet</article>
+    </aside>
+  </div>
+  <footer>Footer</footer>
 </body>
+
 </html>
