3rd commit by Bartolaba

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <aside>
       <article class="one">Picture</article>
       <article class="two">About</article>
-      <article class="three">Recent Tweet</article>
+      <article class="three">Recent Tweets</article>
     </aside>
   </div>
   <footer>Footer</footer>
